-- ============================================
-- CORE ACCOUNTS & AUTHENTICATION
-- ============================================

CREATE TABLE PERSONAL_USER (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    ROLE VARCHAR(50) NOT NULL DEFAULT 'USER',
    NAME VARCHAR(100),
    EMAIL VARCHAR(100),
    PHONE VARCHAR(15),
    PASSWORD VARCHAR(100),
    CONFIRM_PASSWORD VARCHAR(100),
    PROFILE_ICON VARCHAR(255),
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    UNIQUE KEY uq_personal_user_email (EMAIL),
    UNIQUE KEY uq_personal_user_phone (PHONE),
    INDEX (EMAIL),
    INDEX (ROLE)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE RESET_PASSWORD (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    USER_ID INT NOT NULL,
    TOKEN_HASH CHAR(64),
    EXPIRES_AT DATETIME,
    USED TINYINT(1) NOT NULL DEFAULT 0,
    NEW_PASSWORD VARCHAR(100),
    CONFIRM_PASSWORD VARCHAR(100),
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    FOREIGN KEY (USER_ID) REFERENCES PERSONAL_USER(ID) ON DELETE CASCADE,
    INDEX (USER_ID),
    UNIQUE KEY uq_reset_password_token_hash (TOKEN_HASH)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE ACCOUNTS (
    ID VARCHAR(255) PRIMARY KEY,
    NAME VARCHAR(100),
    EMAIL VARCHAR(100),
    PASSWORD VARCHAR(100),
    ROLE VARCHAR(50),
    INDEX (EMAIL)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- PRODUCTS & SHOP MANAGEMENT
-- ============================================

CREATE TABLE SHOP (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    NAME VARCHAR(255),
    DESCRIPTION TEXT,
    LOCATION VARCHAR(255),
    OWNER VARCHAR(100),
    OPENING_HOURS VARCHAR(100),
    CONTACT_EMAIL VARCHAR(100),
    CONTACT_PHONE VARCHAR(20),
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    INDEX (OWNER)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE PRODUCTS (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    VENDOR_ID INT NOT NULL,
    ACCOUNT_ID VARCHAR(255),
    NAME VARCHAR(100),
    CODE VARCHAR(100),
    IMAGE_URL LONGTEXT,
    DESCRIPTION LONGTEXT,
    CONDITIONAL VARCHAR(50),
    CATEGORY VARCHAR(100),
    PRICE INT,
    STOCK_QUANTITY INT,
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    FOREIGN KEY (VENDOR_ID) REFERENCES PERSONAL_USER(ID) ON DELETE CASCADE,
    INDEX (VENDOR_ID),
    INDEX (CODE)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE MANAGE_INVENTORY (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    PRODUCT_ID INT NOT NULL,
    QUANTITY INT,
    LAST_UPDATED TIMESTAMP,
    FOREIGN KEY (PRODUCT_ID) REFERENCES PRODUCTS(ID) ON DELETE CASCADE,
    UNIQUE KEY uq_manage_inventory_product_id (PRODUCT_ID),
    INDEX (PRODUCT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE CATEGORIES (
    ID VARCHAR(255) PRIMARY KEY,
    PRODUCT_ID VARCHAR(255),
    NAME VARCHAR(100),
    DESCRIPTION TEXT,
    INDEX (PRODUCT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE DISCOUNTS (
    ID VARCHAR(255) PRIMARY KEY,
    PRODUCT_ID VARCHAR(255),
    DISCOUNT_PERCENTAGE DECIMAL(5,2),
    START_DATE DATETIME,
    END_DATE DATETIME,
    INDEX (PRODUCT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- SHOPPING & ORDERS
-- ============================================

CREATE TABLE ORDERS (
    ID VARCHAR(255) PRIMARY KEY,
    ACCOUNT_ID VARCHAR(255) NOT NULL,
    PRODUCT_ID VARCHAR(255) NOT NULL,
    QUANTITY INT,
    TOTAL_PRICE DECIMAL(10,2),
    ORDER_DATE DATETIME,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE CASCADE,
    INDEX (ACCOUNT_ID),
    INDEX (ORDER_DATE)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE CARTS (
    ID VARCHAR(255) PRIMARY KEY,
    ACCOUNT_ID VARCHAR(255) NOT NULL,
    PRODUCT_ID VARCHAR(255) NOT NULL,
    QUANTITY INT,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE CASCADE,
    INDEX (ACCOUNT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE WISHLISTS (
    ID VARCHAR(255) PRIMARY KEY,
    ACCOUNT_ID VARCHAR(255) NOT NULL,
    PRODUCT_ID VARCHAR(255) NOT NULL,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE CASCADE,
    INDEX (ACCOUNT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE REVIEWS (
    ID VARCHAR(255) PRIMARY KEY,
    ACCOUNT_ID VARCHAR(255) NOT NULL,
    PRODUCT_ID VARCHAR(255) NOT NULL,
    RATING INT CHECK (RATING >= 1 AND RATING <= 5),
    COMMENT TEXT,
    REVIEW_DATE DATETIME,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE CASCADE,
    INDEX (ACCOUNT_ID),
    INDEX (PRODUCT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- PAYMENTS & DELIVERY
-- ============================================

CREATE TABLE PAYMENTS (
    ID VARCHAR(255) PRIMARY KEY,
    ACCOUNT_ID VARCHAR(255) NOT NULL,
    ORDER_ID VARCHAR(255) NOT NULL,
    AMOUNT DECIMAL(10,2),
    PAYMENT_DATE DATETIME,
    PAYMENT_METHOD VARCHAR(100),
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE CASCADE,
    FOREIGN KEY (ORDER_ID) REFERENCES ORDERS(ID) ON DELETE CASCADE,
    INDEX (ACCOUNT_ID),
    INDEX (ORDER_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE DELIVERIES (
    ID VARCHAR(255) PRIMARY KEY,
    ORDER_ID VARCHAR(255) NOT NULL,
    DELIVERIES_DATE DATETIME,
    DELIVERY_DATE DATETIME,
    STATUS VARCHAR(50),
    FOREIGN KEY (ORDER_ID) REFERENCES ORDERS(ID) ON DELETE CASCADE,
    INDEX (ORDER_ID),
    INDEX (STATUS)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- TRADING SYSTEM
-- ============================================

CREATE TABLE TRADE_LISTINGS (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    USER_ID INT NOT NULL,
    PRODUCT_ID INT,
    TITLE VARCHAR(255) NOT NULL,
    GAME VARCHAR(50) NOT NULL,
    CONDITION_LABEL VARCHAR(100),
    TYPE VARCHAR(50) DEFAULT 'trade',
    WANT_TEXT TEXT,
    NOTES TEXT,
    STATUS VARCHAR(50) DEFAULT 'active',
    CREATED_AT DATETIME DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (USER_ID) REFERENCES PERSONAL_USER(ID) ON DELETE CASCADE,
    INDEX (USER_ID),
    INDEX (GAME),
    INDEX (STATUS)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE TRADE_OFFERS (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    LISTING_ID INT NOT NULL,
    OFFER_USER_ID INT NOT NULL,
    MESSAGE TEXT,
    STATUS VARCHAR(50) DEFAULT 'pending',
    CREATED_AT DATETIME DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (LISTING_ID) REFERENCES TRADE_LISTINGS(ID) ON DELETE CASCADE,
    FOREIGN KEY (OFFER_USER_ID) REFERENCES PERSONAL_USER(ID) ON DELETE CASCADE,
    INDEX (LISTING_ID),
    INDEX (OFFER_USER_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- CARD GAMES & SINGLES
-- ============================================

CREATE TABLE CARD_GAMES (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    TITLE VARCHAR(255) NOT NULL,
    DESCRIPTION TEXT,
    RELEASE_DATE TIMESTAMP,
    GENRE VARCHAR(100),
    PLATFORM VARCHAR(100),
    IMAGE_URL LONGTEXT,
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    INDEX (PLATFORM),
    INDEX (GENRE)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE SINGLES (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    CARD_ID INT,
    ACCOUNT_ID VARCHAR(255),
    CONDITIONS VARCHAR(100),
    SHOP_ID INT,
    TITLE VARCHAR(255) NOT NULL,
    DESCRIPTION LONGTEXT,
    PUBLISHER VARCHAR(100),
    RELEASE_DATE TIMESTAMP,
    CATEGORY VARCHAR(100),
    PLATFORM VARCHAR(100),
    RARITY VARCHAR(255),
    PRICE DECIMAL(10,2),
    STOCK_QUANTITY INT,
    IMAGE_URL LONGTEXT,
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    FOREIGN KEY (CARD_ID) REFERENCES CARD_GAMES(ID) ON DELETE SET NULL,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE SET NULL,
    FOREIGN KEY (SHOP_ID) REFERENCES SHOP(ID) ON DELETE SET NULL,
    INDEX (CARD_ID),
    INDEX (ACCOUNT_ID),
    INDEX (SHOP_ID),
    INDEX (PLATFORM),
    INDEX (RARITY)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- PURCHASE HISTORY
-- ============================================

CREATE TABLE HISTORY_PURCHASE (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    SINGLE_ID INT,
    ACCOUNT_ID VARCHAR(255),
    SHOP_ITEM_ID VARCHAR(255),
    ITEM_NAME VARCHAR(255),
    ITEM_TYPE VARCHAR(100),
    QUANTITY INT,
    PRICE DECIMAL(10,2),
    PURCHASE_DATE TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    PAYMENT_METHOD VARCHAR(100),
    TRANSACTION_ID VARCHAR(255) UNIQUE,
    STATUS VARCHAR(50),
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    FOREIGN KEY (SINGLE_ID) REFERENCES SINGLES(ID) ON DELETE SET NULL,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE SET NULL,
    INDEX (SINGLE_ID),
    INDEX (ACCOUNT_ID),
    INDEX (TRANSACTION_ID),
    INDEX (STATUS)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- TOURNAMENTS & POINTS
-- ============================================

CREATE TABLE TOURNAMENT (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    PRIZE_ID VARCHAR(255),
    NAME VARCHAR(255) NOT NULL,
    DESCRIPTION LONGTEXT,
    START_DATE TIMESTAMP,
    END_DATE TIMESTAMP,
    LOCATION VARCHAR(255),
    ENTRY_FEE DECIMAL(10,2),
    GAME_TITLE VARCHAR(255),
    ORGANIZER VARCHAR(100),
    RULES LONGTEXT,
    REGISTRATION_DEADLINE TIMESTAMP,
    MAX_TEAMS INT,
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    INDEX (GAME_TITLE),
    INDEX (ORGANIZER),
    INDEX (START_DATE)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE PARTICIPANTS (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    TOURNAMENT_ID INT NOT NULL,
    ACCOUNT_ID VARCHAR(255) NOT NULL,
    NICKNAME VARCHAR(100),
    TEAM_NAME VARCHAR(255),
    REGISTRATION_DATE TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (TOURNAMENT_ID) REFERENCES TOURNAMENT(ID) ON DELETE CASCADE,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE CASCADE,
    INDEX (TOURNAMENT_ID),
    INDEX (ACCOUNT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE POINT_SYSTEM (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    ACCOUNT_ID VARCHAR(255),
    TOURNAMENT_ID INT,
    POINTS INT DEFAULT 0,
    LAST_UPDATED TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    FOREIGN KEY (ACCOUNT_ID) REFERENCES ACCOUNTS(ID) ON DELETE CASCADE,
    FOREIGN KEY (TOURNAMENT_ID) REFERENCES TOURNAMENT(ID) ON DELETE CASCADE,
    INDEX (ACCOUNT_ID),
    INDEX (TOURNAMENT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE PRIZES (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    TOURNAMENT_ID INT NOT NULL,
    POSITION INT,
    DESCRIPTION LONGTEXT,
    AMOUNT DECIMAL(10,2),
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    FOREIGN KEY (TOURNAMENT_ID) REFERENCES TOURNAMENT(ID) ON DELETE CASCADE,
    INDEX (TOURNAMENT_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE PRIZE_POINT (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    PRIZE_ID INT,
    POINT_SYSTEM_ID INT,
    DESCRIPTION LONGTEXT,
    AMOUNT DECIMAL(10,2),
    FOREIGN KEY (PRIZE_ID) REFERENCES PRIZES(ID) ON DELETE CASCADE,
    FOREIGN KEY (POINT_SYSTEM_ID) REFERENCES POINT_SYSTEM(ID) ON DELETE CASCADE,
    INDEX (PRIZE_ID),
    INDEX (POINT_SYSTEM_ID)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- NEWS & UPDATES
-- ============================================

CREATE TABLE NEWS (
    ID INT AUTO_INCREMENT PRIMARY KEY,
    TITLE VARCHAR(255) NOT NULL,
    CONTENT LONGTEXT,
    DATE_POSTED TIMESTAMP,
    AUTHOR VARCHAR(100),
    CATEGORY VARCHAR(100),
    IMAGE_URL LONGTEXT,
    TAGS VARCHAR(255),
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP,
    INDEX (CATEGORY),
    INDEX (AUTHOR),
    INDEX (DATE_POSTED)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ============================================
-- END OF DATABASE SCHEMA
-- ============================================
